--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "start-agent": "node autonomous_agent.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "@supabase/supabase-js": "^2.86.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.294.0",
+    "puppeteer": "^24.31.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@google/generative-ai": "^0.21.0",
-    "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0",
     "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
@@ -22,10 +24,10 @@
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
+    "dotenv": "^16.6.1",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0",
-    "dotenv": "^16.3.1"
+    "vite": "^5.0.0"
   }
 }
